# derailed-api

./: .env.example  .gitignore  Dockerfile  README.md  app.py  auto-deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
capture/: __init__.py  depends.py  exceptions.py  identifier.py  rate_limit.py
capture/database/: __init__.py  authorization.py  engine.py
capture/guilds/: information.py
capture/users/: __init__.py  personal.py
derailed/: __init__.py  depends.py  exceptions.py  identifier.py  permissions.py  rate_limit.py
derailed/database/: __init__.py  authorization.py  engine.py  event.py  utils.py
derailed/etc/: relationships.py
derailed/guilds/: __init__.py  guild.py  invites.py  role.py
derailed/tracks/: __init__.py  group_dm.py  guild.py  message.py  meta.py
derailed/users/: __init__.py  personal.py  presence.py  settings.py
felladex/: __init__.py  depends.py  exceptions.py  identifier.py  permissions.py  rate_limit.py
felladex/database/: __init__.py  authorization.py  engine.py  event.py  utils.py
felladex/etc/: relationships.py
felladex/guilds/: guild.py  role.py
felladex/tracks/: group_dm.py  guild.py  meta.py
felladex/users/: personal.py  presence.py  settings.py
scratch/: __init__.py  depends.py  exceptions.py  identifier.py  rate_limit.py
scratch/database/: __init__.py  authorization.py  engine.py  event.py
scratch/guilds/: __init__.py  (+1 more)
valve/: depends.py  identifier.py  rate_limit.py
vincentchatapi/: __init__.py  depends.py  exceptions.py  identifier.py  permissions.py  rate_limit.py
(+49 files in other folders)
