[tool.poetry]
name = "derailed-api"
version = "1.0.0"
description = "Derailed's API for processing requests"
authors = ["VincentRPS <vincentbusiness55@gmail.com>"]

[tool.isort]
profile = 'black'

[tool.black]
target-version = ['py310']
skip-string-normalization = true

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.79.0"
argon2-cffi = "21.3.0"
itsdangerous = "^2.1.2"
sentry-sdk = "^1.9.5"
beanie = "^1.11.7"
slowapi = "^0.1.5"
python-dotenv = "^0.20.0"
email-validator = "^1.2.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
